--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <!--подключение CSS файла-->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
    <header class="header">
         <!--контейнер для логотипа-->
         <article class="header_logo">
         <!--логотип-->
-        <img src="/img/Navbar/logo.png" alt="logotype">
+        <img src="./img/Navbar/logo.png" alt="logotype">
         </article>
         <!--меню навигации по сайту-->
         <nav class="header_navigation">
@@ -41,11 +41,11 @@
         </div>
         <!--png на главной странице-->
         <div class="mainsite_img">
-            <img src="/img/Header/header1.png" alt="1" class="mainsite_img_1">
-            <img src="/img/Header/header2.png" alt="2" class="mainsite_img_2">
-            <img src="/img/Header/header3.png" alt="3" class="mainsite_img_1">
-            <img src="/img/Header/header4.png" alt="4" class="mainsite_img_2">
-            <img src="/img/Header/header5.png" alt="5" class="mainsite_img_1">
+            <img src="./img/Header/header1.png" alt="1" class="mainsite_img_1">
+            <img src="./img/Header/header2.png" alt="2" class="mainsite_img_2">
+            <img src="./img/Header/header3.png" alt="3" class="mainsite_img_1">
+            <img src="./img/Header/header4.png" alt="4" class="mainsite_img_2">
+            <img src="./img/Header/header5.png" alt="5" class="mainsite_img_1">
         </div>
     </section>
 
@@ -54,17 +54,17 @@
     <!--секция для текста "about us"-->
     <section class="secondsite_up">
         <div>
-        <img src="/img/Layout/box.png" alt="box">
+        <img src="./img/Layout/box.png" alt="box">
         <h3 class="secondsite_up_high">Medium length section</h3>
         <h4 class="secondsite_up_lower">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h4>
         </div>
         <div>
-        <img src="/img/Layout/box.png" alt="box">
+        <img src="./img/Layout/box.png" alt="box">
         <h3 class="secondsite_up_high">Medium length section</h3>
         <h4 class="secondsite_up_lower">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h4>
         </div>
         <div>
-        <img src="/img/Layout/box.png" alt="box">
+        <img src="./img/Layout/box.png" alt="box">
         <h3 class="secondsite_up_high">Medium length section</h3>
         <h4 class="secondsite_up_lower">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h4>
         </div>
@@ -284,4 +284,5 @@
         </div>
     </footer>
 </body>
+
 </html>
