--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 
             </div>
             <div class="careers_vkladka_5_txt">
-                <img class="careers_vkladka_5_img_2" src="/img/Layout/nazvanie_vkladki.png" alt="">
+                <img class="careers_vkladka_5_img_2" src="./img/Layout/nazvanie_vkladki.png" alt="">
                 <h2 class="careers_vkladka_5_txt_1">Medium length section<br>heading goes here</h2>
                 <h4 class="careers_vkladka_5_txt_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> 
                     Suspendisse varius enim in eros elementum tristique.<br>
@@ -286,4 +286,5 @@
 </body>
 
 </html>
+
 
